Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.1.0 RC1
-
Fix Version/s: 5.1.0
-
Component/s: (Inactive) QtQuick (version 1), Examples and Demos
-
Labels:None
-
Environment:android
-
Commits:4e2153a1d5056249fc31e23890d8c525a3986e1b
Description
The Dialogs module will try to create a QFileDialog first, and that will crash because you can't have multiple windows on Android.
But first, it has to be possible to build this example for android; that requires a boilerplate C++ launcher and .pro file, because Creator will not even let you select the Android kit if you only have a .qmlproject file. It considers such projects to be desktop-only. photosurface so far only works with qmlscene, but being a touch demo, it makes sense to have it on Android too.